force-app/main/default/objects/DeliveryAdress__c/DeliveryAdress__c.object-meta.xml
<CustomObject>
    <label>DeliveryAdress</label>
    <nameField>
        <label>DeliveryAdreess Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DeliveryAdreses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>