force-app/main/default/objects/DeliveryAdress__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <formula
  >Country__c  &amp; &quot;,&quot;&amp;  State__c   &amp; &quot;,&quot;&amp;  City__c  &amp; &quot;,&quot;&amp;  Street__c  &amp; &quot;,&quot;&amp;  PostalCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adress</label>
    <type>Text</type>
</CustomField>