force-app/main/default/objects/DeliveryAdress__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DeliveryAdreses</relationshipLabel>
    <relationshipName>DeliveryAdreses</relationshipName>
    <type>Lookup</type>
</CustomField>