force-app/main/default/objects/DeliveryAdress__c/fields/Custom_OrderId__c.field-meta.xml
<CustomField>
    <fullName>Custom_OrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Custom OrderId</label>
    <referenceTo>Custom_Order__c</referenceTo>
    <relationshipLabel>DeliveryAdreses</relationshipLabel>
    <relationshipName>DeliveryAdreses</relationshipName>
    <type>Lookup</type>
</CustomField>